[package]
name = "stellar-strkey"
description = "Encode and decode strkeys for Stellar."
homepage = "https://github.com/stellar/rs-stellar-strkey"
repository = "https://github.com/stellar/rs-stellar-strkey"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.10"
edition = "2021"
rust-version = "1.67.0"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
cli = ["std", "dep:clap"]

[[bin]]
name = "stellar-strkey"
path = "src/bin/stellar-strkey/main.rs"
required-features = ["cli"]
doctest = false

[build-dependencies]
crate-git-revision = "0.0.6"

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
data-encoding = { version = "2.6.0", default-features = false }
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
