[package]
name = "stellar-strkey"
description = "Encode and decode strkeys for Stellar."
homepage = "https://github.com/stellar/rs-stellar-strkey"
repository = "https://github.com/stellar/rs-stellar-strkey"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.15"
edition = "2021"
rust-version = "1.81.0"

[features]
default = []
cli = ["serde-decoded", "dep:clap", "dep:serde_json", "dep:thiserror"]
serde = ["dep:serde", "dep:serde_with"]
serde-decoded = ["serde"]

[[bin]]
name = "stellar-strkey"
path = "src/bin/stellar-strkey/main.rs"
required-features = ["cli"]
doctest = false

[build-dependencies]
crate-git-revision = "0.0.6"

[dev-dependencies]
proptest ="1.0.0"
serde_test = "1.0.177"

[dependencies]
data-encoding = { version = "2.6.0", default-features = false, features = ["alloc"] }
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
serde_with = { version = "3.11.0", optional = true, features = ["hex"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = { version = "2.0", optional = true }
