[package]
name = "stellar-strkey-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
std = ["stellar-strkey/std"]
alloc = ["stellar-strkey/alloc"]
serde = ["stellar-strkey/serde"]
serde-decoded = ["stellar-strkey/serde-decoded"]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.stellar-strkey]
path = ".."

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false
