[package]
name = "stellar-strkey-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.stellar-strkey]
path = ".."

[dependencies.stellar-strkey-v13]
package = "stellar-strkey"
version = "0.0.13"

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compare_v13"
path = "fuzz_targets/fuzz_compare_v13.rs"
test = false
doc = false
bench = false
